Replaced the name [Cc]lassic in all files with cmsplugin_filer.

--- a/cmsplugin_filer_folder/static/cmsplugin_filer_folder/js/galleria/themes/cmsplugin_filer/cmsplugin_filer-demo.html
+++ b/cmsplugin_filer_folder/static/cmsplugin_filer_folder/js/galleria/themes/cmsplugin_filer/cmsplugin_filer-demo.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Galleria Classic Theme</title>
+        <title>Galleria cmsplugin_filer Theme</title>
         <style>
 
             /* Demo styles */
@@ -28,7 +28,7 @@
     </head>
 <body>
     <div class="content">
-        <h1>Galleria Classic Theme</h1>
+        <h1>Galleria cmsplugin_filer Theme</h1>
         <p>Demonstrating a basic gallery example.</p>
 
         <!-- Adding gallery images. We use resized thumbnails here for better performance, but it’s not necessary -->
@@ -113,8 +113,8 @@
 
     <script>
 
-    // Load the classic theme
-    Galleria.loadTheme('galleria.classic.min.js');
+    // Load the cmsplugin_filer theme
+    Galleria.loadTheme('galleria.cmsplugin_filer.min.js');
 
     // Initialize Galleria
     Galleria.run('#galleria');
